add Application Settings

--- a/Screenshots/appsettings.json
+++ b/Screenshots/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ApplicationSettings": {
+    "BaseFileName": "Screenshot_{dateTimeNow}.png",
+    "TimeStampFormat": "dddd, dd MMMM yyyy HH:mm:ss tt",
+    "FontName": "Arial",
+    "FontSize": 30,
+    "ScreenshotHeight": 1080,
+    "ScreenshotWidth": 1920,
+    "CultureName": "en"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
