--- a/Screenshots/appsettings.json
+++ b/Screenshots/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationSettings": {
-    "BaseFileName": "Screenshot_{dateTimeNow}.png",
+    "BaseFileName": "Screenshot_{0}.png",
     "TimeStampFormat": "dddd, dd MMMM yyyy HH:mm:ss tt",
     "FontName": "Arial",
     "FontSize": 30,
